--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,8 @@ MANIFEST
 *.manifest
 *.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# No txt files
+*.txt
 
 # Unit test / coverage reports
 htmlcov/
